--- a/colorCalibration.ipynb
+++ b/colorCalibration.ipynb
@@ -146,7 +146,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3.10.5 64-bit (windows store)",
    "language": "python",
    "name": "python3"
   },
@@ -165,7 +165,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "e50035b3dfd539dbd2dca26cbba61024e04488120c7d4591534a01642a5bb0ca"
    }
   }
  },
